<resources>
    <string name="app_name">BakingApp</string>
    <string name="recipe_summary">Serves %d / %d ingredients / %d steps</string>
    <string name="title_activity_recipe_detail">RecipeDetailActivity</string>
    <string name="step_name">Step %d of %d - %s</string>
    <string name="recipe_ingredients">Recipe Ingredients</string>
    <string name="recipe_steps">Steps</string>
    <string name="title_activity_step_detail">StepDetailActivity</string>
    <string name="previous_step">Previous Step</string>
    <string name="next_step">Next Step</string>
    <string name="video_player_error">Error while trying to play video</string>
    <string name="video_player_loading">Loading video. Please wait</string>
    <string name="video_player_no_video">No video avaible</string>
    <string name="recipe_name_with_steps">%s - Step %d of %d</string>
    <string name="try_again">Try again</string>
    <string name="recipe_list_fetch_fail">Failed to fetch recipe list</string>
    <string name="appwidget_text">Banoffee Pie</string>
    <string name="select_recipe">Select recipe</string>
    <string name="add_widget">Add widget</string>
    <string name="preference_recipe_list">pref_recipes_list</string>
    <string name="recipe_list_fetch_fail_getting_from_preferences">Failed to fech recipe list from internet.\nUsing last version downloaded.</string>
    <string name="no_recipes_available_yet">No recipes available. Please use app first.</string>
</resources>
