<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RecipeDetailFragment">

    <android.support.constraint.ConstraintLayout
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtIngredientsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_ingredients"
            android:textSize="@dimen/text_big"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txtIngredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtIngredientsTitle"
            android:layout_marginTop="8dp"
            tools:text="2 CUP Graham Cracker crumbs; 6 TBLP unsalted butter, melted;" />

        <TextView
            android:id="@+id/txtStepsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/recipe_steps"
            android:textSize="@dimen/text_big"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtIngredients" />

        <LinearLayout
            android:id="@+id/stepsPlaceHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtStepsTitle">
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>